<resources>
    <string name="app_name">FamilyBudget</string>

    <string name="title_family_members">Family members</string>
    <string name="title_actual_expenses">Actual expenses</string>
    <string name="title_planned_expenses">Planned expenses</string>
    <string name="title_all_transactions">Balance report</string>
    <string name="title_incomes">Incomes</string>
    <string name="title_total_balance">Total balance</string>
    <string name="title_categories">Categories</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_make_expense">Make expense</string>
    <string name="title_make_income">Make income</string>
    <string name="title_make_category">Make category</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="title_activity_dashboard">Family members</string>

    <string name="select_category">Select category</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_color">Pick a color</string>

    <string name="loading">Loading…</string>
    <string name="search_hint">Search…</string>
    <string name="time">Time</string>
    <string name="logout">Logout</string>

    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="relationship">Relationship</string>
    <string name="confirm_password">Confirm password</string>
    <string name="income_types">Income types</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="balance_is_unavailable">Your balance is unavailable</string>
    <string name="balance">Balance:&#160;</string>
    <string name="total_actual_expenses">Total actual expenses:&#160;</string>
    <string name="total_planned_expenses">Total planned expenses:&#160;</string>
    <string name="total_incomes">Total incomes:&#160;</string>
    <string name="action_settings">Settings</string>

    <string name="select_a_file">Select a media file</string>
    <string name="empty_field_error">Please fill in all fields</string>
    <string name="user_exists">User with the same name already exists</string>
    <string name="user_not_exists">User with the same name does not exist</string>
    <string name="wrong_data">Wrong login or password</string>
    <string name="error">An error occurred. Try again</string>
    <string name="returned_empty">returned empty</string>

    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="starting_balance">Starting balance</string>
    <string name="init_your_balance">Init your balance</string>

    <string name="delete">Delete</string>

    <string name="confirm_dialog_title">Confirm deletion?</string>
    <string name="confirm_dialog_message">Undo this action will be impossible</string>
    <string name="confirm_dialog_positive">Yes</string>
    <string name="confirm_dialog_negative">No</string>

    <string name="negative_balance">You can not add expense</string>
    <string name="filter">Filter</string>

    <string name="date_picker_title_start">From</string>
    <string name="date_picker_title_end">To</string>
    <string name="time_range_error">End time cannot be less than start time</string>
    <string name="export">Export</string>

    <string name="excel_table_name">Family budget</string>

    <string name="excel_first_column_title">Статья</string>
    <string name="excel_second_column_title">Кто</string>
    <string name="excel_third_column_title">Сумма</string>
    <string name="excel_fourth_column_title">Дата</string>

    <string name="excel_income_column_title">Доход</string>
    <string name="excel_expense_column_title">Расход</string>
    <string name="excel_balance_column_title">Баланс</string>
    <string name="excel_total_column_title">Итого</string>
    <string name="file_saved">File has been saved</string>
    <string name="open">Open</string>

    <string-array name="income_types">
        <item>Salary</item>
        <item>Scholarship</item>
        <item>Pension</item>
        <item>Benefits</item>
        <item>Investments</item>
        <item>Translation</item>
        <item>Debt</item>
        <item>Gift</item>
        <item>Additional income</item>
    </string-array>
</resources>
